--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,12 @@
-altgraph==0.17.4
-bandit==1.7.10
-bidict==0.23.1
 blinker==1.8.2
-Brotli==1.1.0
-certifi==2024.8.30
-charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
-Flask-Mail==0.10.0
-Flask-SocketIO==5.3.7
-h11==0.14.0
-idna==3.10
+Flask-Cors==5.0.0
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
-markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-mdurl==0.1.2
-mutagen==1.47.0
 packaging==24.1
-pbr==6.1.0
-pefile==2024.8.26
-pycryptodomex==3.20.0
-Pygments==2.18.0
-pyinstaller==6.10.0
-pyinstaller-hooks-contrib==2024.8
-PyMuPDF==1.24.10
-PyMuPDFb==1.24.10
 python-dotenv==1.0.1
-python-engineio==4.9.1
-python-socketio==5.11.4
-pytube @ git+https://github.com/pytube/pytube@a32fff39058a6f7e5e59ecd06a7467b71197ce35
-pywin32-ctypes==0.2.3
-PyYAML==6.0.2
-requests==2.32.3
-rich==13.8.1
-setuptools==75.1.0
-stevedore==5.3.0
-urllib3==2.2.3
-websockets==13.1
 Werkzeug==3.0.4
-wsproto==1.2.0
-youtube-dl==2021.12.17
-yt-dlp==2024.8.6
